Ajouter redis cache a customer-service avec cacheLoggingAspect